--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Start Bootstrap</a>
+                <a class="navbar-brand" href="#">J Beightol</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -66,8 +66,8 @@
         <!-- Page Heading -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Page Heading
-                    <small>Secondary Text</small>
+                <h1 class="page-header">Portfolio
+                    <small>Data Science</small>
                 </h1>
             </div>
         </div>
@@ -81,9 +81,9 @@
                 </a>
             </div>
             <div class="col-md-5">
-                <h3>Project One</h3>
+                <h3>Diagnosing Viral Tweets</h3>
                 <h4>Subheading</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium veniam exercitationem expedita laborum at voluptate. Labore, voluptates totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque eveniet unde.</p>
+                <p>I scraped 8000 tweets from organizations including the New York Times, Washington Post, Mashable, and BuzzFeed and analyzed their contents. I used NLP techniques to determine which text features will get you retweets!</p>
                 <a class="btn btn-primary" href="#">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
             </div>
         </div>
