--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div class="row">
             <div class="col-md-7">
                 <a href="#">
-                    <img class="img-responsive" src="http://placehold.it/700x300" alt="">
+                    <img class="img-responsive" src="https://public.tableau.com/views/TitanicbyP-Class/Titanic-Class?:embed=y&:display_count=yes" alt="">
                 </a>
             </div>
             <div class="col-md-5">
