--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">J Beightol</a>
+                <a class="navbar-brand" href="#">J Beightol test</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -77,7 +77,7 @@
         <div class="row">
             <div class="col-md-7">
                 <a href="#">
-                    <img class="img-responsive" src="https://public.tableau.com/views/TitanicbyP-Class/Titanic-Class?:embed=y&:display_count=yes" alt="">
+                    <img class="img-responsive" src="img/capstone.png" alt="">
                 </a>
             </div>
             <div class="col-md-5">
