--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <!-- Project One -->
         <div class="row">
             <div class="col-md-7">
-                <a href="#">
+                <a href="http://nbviewer.jupyter.org/github/jbeightol/Random/blob/master/JB.Capstone.Portfolio2.ipynb">
                     <img class="img-responsive" src="img/capstone.png" alt="">
                 </a>
             </div>
@@ -84,7 +84,7 @@
                 <h3>Diagnosing Viral Tweets</h3>
                 <h4>Subheading</h4>
                 <p>I scraped 8000 tweets from organizations including the New York Times, Washington Post, Mashable, and BuzzFeed and analyzed their contents. I used NLP techniques to determine which text features will get you retweets!</p>
-                <a class="btn btn-primary" href="#">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
+                <a class="btn btn-primary" href="http://nbviewer.jupyter.org/github/jbeightol/Random/blob/master/JB.Capstone.Portfolio2.ipynb">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
             </div>
         </div>
         <!-- /.row -->
