--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">J Beightol test</a>
+                <a class="navbar-brand" href="#">J Beightol</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -66,8 +66,8 @@
         <!-- Page Heading -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Portfolio
-                    <small>Data Science</small>
+                <h1 class="page-header">Data Science
+                    <small>Portfolio</small>
                 </h1>
             </div>
         </div>
@@ -82,7 +82,7 @@
             </div>
             <div class="col-md-5">
                 <h3>Diagnosing Viral Tweets</h3>
-                <h4>Subheading</h4>
+                <h4></h4>
                 <p>I scraped 8000 tweets from organizations including the New York Times, Washington Post, Mashable, and BuzzFeed and analyzed their contents. I used NLP techniques to determine which text features will get you retweets!</p>
                 <a class="btn btn-primary" href="http://nbviewer.jupyter.org/github/jbeightol/Random/blob/master/JB.Capstone.Portfolio2.ipynb">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
             </div>
@@ -94,15 +94,15 @@
         <!-- Project Two -->
         <div class="row">
             <div class="col-md-7">
-                <a href="#">
-                    <img class="img-responsive" src="http://placehold.it/700x300" alt="">
+                <a href="http://nbviewer.jupyter.org/github/jbeightol/Random/blob/master/Titanic.ipynb">
+                    <img class="img-responsive" src="img/t_tree.png" alt="">
                 </a>
             </div>
             <div class="col-md-5">
-                <h3>Project Two</h3>
-                <h4>Subheading</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, odit velit cumque vero doloremque repellendus distinctio maiores rem expedita a nam vitae modi quidem similique ducimus! Velit, esse totam tempore.</p>
-                <a class="btn btn-primary" href="#">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
+                <h3>Predicting Titanic Survival</h3>
+                <h4></h4>
+                <p>Using a Decision Tree Classifier to predict whether or not an individual survived the Titanic. Thanks to a Kaggle data set we are able to use features such as the age, gender, and ticket class for each passenger.</p>
+                <a class="btn btn-primary" href="http://nbviewer.jupyter.org/github/jbeightol/Random/blob/master/Titanic.ipynb">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
             </div>
         </div>
         <!-- /.row -->
