--- a/index.html
+++ b/index.html
@@ -112,15 +112,15 @@
         <!-- Project Three -->
         <div class="row">
             <div class="col-md-7">
-                <a href="#">
-                    <img class="img-responsive" src="http://placehold.it/700x300" alt="">
+                <a href="http://nbviewer.jupyter.org/github/jbeightol/Random/blob/master/JB-V3-Coding-Challenge.ipynb">
+                    <img class="img-responsive" src="img/cancer_violin.png" alt="">
                 </a>
             </div>
             <div class="col-md-5">
-                <h3>Project Three</h3>
-                <h4>Subheading</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, temporibus, dolores, at, praesentium ut unde repudiandae voluptatum sit ab debitis suscipit fugiat natus velit excepturi amet commodi deleniti alias possimus!</p>
-                <a class="btn btn-primary" href="#">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
+                <h3>Machine Learning to Catch Cancer</h3>
+                <h4></h4>
+                <p>Using the UW-Madison's database of tumor images to classify tumors as malignant or benign. Here I use different methods of feature selection to ultimately decide which aspects I want to include in my model.</p>
+                <a class="btn btn-primary" href="http://nbviewer.jupyter.org/github/jbeightol/Random/blob/master/JB-V3-Coding-Challenge.ipynb">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
             </div>
         </div>
         <!-- /.row -->
@@ -131,15 +131,15 @@
         <div class="row">
 
             <div class="col-md-7">
-                <a href="#">
-                    <img class="img-responsive" src="http://placehold.it/700x300" alt="">
+                <a href="https://medium.com/@jbeightol121/visualizing-grand-slam-finals-f9800ca2a4c7#.hf7hst4aj">
+                    <img class="img-responsive" src="img/tennis.png" alt="">
                 </a>
             </div>
             <div class="col-md-5">
-                <h3>Project Four</h3>
-                <h4>Subheading</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, quidem, consectetur, officia rem officiis illum aliquam perspiciatis aspernatur quod modi hic nemo qui soluta aut eius fugit quam in suscipit?</p>
-                <a class="btn btn-primary" href="#">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
+                <h3>Grand-Slam Tennis!</h3>
+                <h4></h4>
+                <p>I Scraped web data to visualize grandslam tennis champions over the past 25 years. Using Pyton and Tabeau to produce Dynamic images. </p>
+                <a class="btn btn-primary" href="https://medium.com/@jbeightol121/visualizing-grand-slam-finals-f9800ca2a4c7#.hf7hst4aj">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
             </div>
         </div>
         <!-- /.row -->
@@ -149,15 +149,15 @@
         <!-- Project Five -->
         <div class="row">
             <div class="col-md-7">
-                <a href="#">
-                    <img class="img-responsive" src="http://placehold.it/700x300" alt="">
+                <a href="https://medium.com/@jbeightol121/visualizing-crime-in-san-francisco-e4ba55fc4086#.33tys49ev">
+                    <img class="img-responsive" src="img/san_fran.png" alt="">
                 </a>
             </div>
             <div class="col-md-5">
-                <h3>Project Five</h3>
-                <h4>Subheading</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, quo, minima, inventore voluptatum saepe quos nostrum provident ex quisquam hic odio repellendus atque porro distinctio quae id laboriosam facilis dolorum.</p>
-                <a class="btn btn-primary" href="#">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
+                <h3>San Fransico Crime Maps</h3>
+                <h4></h4>
+                <p>Using iPython tools to map out police districs in San Fransico</p>
+                <a class="btn btn-primary" href="https://medium.com/@jbeightol121/visualizing-crime-in-san-francisco-e4ba55fc4086#.33tys49ev">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
             </div>
         </div>
         <!-- /.row -->
