--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <div class="col-md-5">
                 <h3>Diagnosing Viral Tweets</h3>
                 <h4></h4>
-                <p>I scraped 8000 tweets from organizations including the New York Times, Washington Post, Mashable, and BuzzFeed and analyzed their contents. I used NLP techniques to determine which text features will get you retweets!</p>
+                <p>I scraped 12,000 tweets from organizations including the New York Times, Washington Post, Mashable, and BuzzFeed and analyzed their contents. I used NLP techniques to determine which text features will get you retweets!</p>
                 <a class="btn btn-primary" href="http://nbviewer.jupyter.org/github/jbeightol/Random/blob/master/JB.Capstone.Portfolio2.ipynb">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
             </div>
         </div>
@@ -92,6 +92,21 @@
         <hr>
 
         <!-- Project Two -->
+                <div class="row">
+            <div class="col-md-7">
+                <a href="http://nbviewer.jupyter.org/github/jbeightol/Random/blob/7d770f9ffbf82a14e31ac050d9637ae3f3b44420/Project%203%20Portfolio.ipynb">
+                    <img class="img-responsive" src="img/proj3.png" alt="">
+                </a>
+            </div>
+            <div class="col-md-5">
+                <h3>Data-Science Job Listings</h3>
+                <h4></h4>
+                <p>For this project I to predicted the salary of a data science job posting based on other factors in the description including the location, company, and whether certain key words appeared in the title. I scraped job listings from indeed.com in order to build out my data set.</p>
+                <a class="btn btn-primary" href="https://medium.com/@jbeightol121/visualizing-crime-in-san-francisco-e4ba55fc4086#.33tys49ev">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
+            </div>
+        </div>
+
+
         <div class="row">
             <div class="col-md-7">
                 <a href="http://nbviewer.jupyter.org/github/jbeightol/Random/blob/master/Titanic.ipynb">
@@ -149,14 +164,14 @@
         <!-- Project Five -->
         <div class="row">
             <div class="col-md-7">
-                <a href="https://medium.com/@jbeightol121/visualizing-crime-in-san-francisco-e4ba55fc4086#.33tys49ev">
-                    <img class="img-responsive" src="img/san_fran.png" alt="">
+                <a href="http://nbviewer.jupyter.org/github/jbeightol/Random/blob/7d770f9ffbf82a14e31ac050d9637ae3f3b44420/Project%203%20Portfolio.ipynb">
+                    <img class="img-responsive" src="img/proj3.png" alt="">
                 </a>
             </div>
             <div class="col-md-5">
-                <h3>San Fransico Crime Maps</h3>
+                <h3>Data-Science Job Listings</h3>
                 <h4></h4>
-                <p>Using iPython tools to map out police districs in San Fransico</p>
+                <p>For this project I to predicted the salary of a data science job posting based on other factors in the description including the location, company, and whether certain key words appeared in the title. I scraped job listings from indeed.com in order to build out my data set.</p>
                 <a class="btn btn-primary" href="https://medium.com/@jbeightol121/visualizing-crime-in-san-francisco-e4ba55fc4086#.33tys49ev">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
             </div>
         </div>
