--- a/index.html
+++ b/index.html
@@ -102,13 +102,16 @@
                 <h3>Data-Science Job Listings</h3>
                 <h4></h4>
                 <p>For this project I to predicted the salary of a data science job posting based on other factors in the description including the location, company, and whether certain key words appeared in the title. I scraped job listings from indeed.com in order to build out my data set.</p>
-                <a class="btn btn-primary" href="https://medium.com/@jbeightol121/visualizing-crime-in-san-francisco-e4ba55fc4086#.33tys49ev">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
+                <a class="btn btn-primary" href="http://nbviewer.jupyter.org/github/jbeightol/Random/blob/7d770f9ffbf82a14e31ac050d9637ae3f3b44420/Project%203%20Portfolio.ipynb">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
             </div>
         </div>
 
-         <hr>
 
+        <!-- /.row -->
 
+        <hr>
+
+        <!-- Project Three -->
         <div class="row">
             <div class="col-md-7">
                 <a href="http://nbviewer.jupyter.org/github/jbeightol/Random/blob/master/Titanic.ipynb">
@@ -126,7 +129,7 @@
 
         <hr>
 
-        <!-- Project Three -->
+        <!-- Project Four -->
         <div class="row">
             <div class="col-md-7">
                 <a href="http://nbviewer.jupyter.org/github/jbeightol/Random/blob/master/JB-V3-Coding-Challenge.ipynb">
@@ -144,7 +147,7 @@
 
         <hr>
 
-        <!-- Project Four -->
+        <!-- Project Five -->
         <div class="row">
 
             <div class="col-md-7">
@@ -157,24 +160,6 @@
                 <h4></h4>
                 <p>I Scraped web data to visualize grandslam tennis champions over the past 25 years. Using Pyton and Tabeau to produce Dynamic images. </p>
                 <a class="btn btn-primary" href="https://medium.com/@jbeightol121/visualizing-grand-slam-finals-f9800ca2a4c7#.hf7hst4aj">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
-            </div>
-        </div>
-        <!-- /.row -->
-
-        <hr>
-
-        <!-- Project Five -->
-        <div class="row">
-            <div class="col-md-7">
-                <a href="http://nbviewer.jupyter.org/github/jbeightol/Random/blob/7d770f9ffbf82a14e31ac050d9637ae3f3b44420/Project%203%20Portfolio.ipynb">
-                    <img class="img-responsive" src="img/proj3.png" alt="">
-                </a>
-            </div>
-            <div class="col-md-5">
-                <h3>Data-Science Job Listings</h3>
-                <h4></h4>
-                <p>For this project I to predicted the salary of a data science job posting based on other factors in the description including the location, company, and whether certain key words appeared in the title. I scraped job listings from indeed.com in order to build out my data set.</p>
-                <a class="btn btn-primary" href="https://medium.com/@jbeightol121/visualizing-crime-in-san-francisco-e4ba55fc4086#.33tys49ev">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
             </div>
         </div>
         <!-- /.row -->
